# Eureka

./: .gitignore  README.md
Frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
Frontend/public/: sample-plan.md
Frontend/src/: App.tsx  index.css
Frontend/src/components/: ConstraintSection.tsx  ConstraintsView.tsx  HomeButton.tsx  InputView.tsx  IntakeView.tsx  LoadingTransition.tsx  LoadingView.tsx  PlanReviewView.tsx  RefinerView.tsx  SuccessView.tsx  VoiceMicButton.tsx
Frontend/src/components/graph/: CriticalityNode.tsx  DependencyGraph.tsx  GraphLoadingScreen.tsx  GraphView.tsx  NodeDetailSheet.tsx  TechStackMarkdown.tsx  graphData.ts
Frontend/src/components/ui/: button.tsx
Frontend/src/hooks/: useLiveKit.ts  useLiveKitVoice.ts  useVoiceInput.ts
Frontend/src/pages/: Graph.tsx  Index.tsx  PlanView.tsx
agent-starter-python-main/: pyproject.toml
agent-starter-python-main/src/: agent.py
backend/: agents.py  app.py  models.py  phase_ii_agents.py  requirements.txt  test.json  tracing.py
backend/refinement_crew/: README.md  pyproject.toml
backend/refinement_crew/src/refinement_crew/: crew.py  main.py
livekit/: README.md  agent.py  requirements.txt  test_client.html  token_server.py
livekit-testing/: main.py  requirements.txt
