[project]
name = "refinement_crew"
version = "0.1.0"
description = "refinement_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
refinement_crew = "refinement_crew.main:run"
run_crew = "refinement_crew.main:run"
train = "refinement_crew.main:train"
replay = "refinement_crew.main:replay"
test = "refinement_crew.main:test"
run_with_trigger = "refinement_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
